# muesli2py

./: .gitignore  .gitmodules  LICENSE  README.md  buildmuesli.sh  main.py
Muesli/: muesli.cpp  muesli.cu  setup.py  setup_cuda.py
pybind11_muesli/: 1Node2021.sh  2Node2021.sh  4Node2021.sh  8Node2021.sh  CMakeLists.txt  alt_mandelbrot.de.py  build.sh  build_and_run.sh  da.cpp  dm.cpp  dm.h  mandelbrot.de.py  mandelbrot.py  mandelbrot_v2.py  module.cpp  muesli_utils.cpp  seq_mandelbrot.de.py  slurmExample.sh  test.py  testDA.py  testDM.py
pybind11_muesli/include/: da.h  dm.h  muesli.h  pixel.h  timer.h
pybind11_muesli/include/detail/: exception.h
pybind11_muesli/src/: da.cpp  dm.cpp  muesli.cpp  muesli_com.cpp  muesli_com.tpp
swig_muesli/: build_and_run.sh  main.py
swig_muesli/muesli/: build_muesli.sh  setup_muesli_utils.py
swig_muesli/muesli/da/: da.cxx  da.h  da.i  da.py  da_wrap.c  da_wrap.cpp  setup_cuda.py  setup_da.py
swig_muesli/muesli/muesli_utils/: muesli_utils.c  muesli_utils.h  muesli_utils.i  muesli_utils.py  muesli_utils_wrap.c  setup_cuda.py  setup_muesli_utils.py
